# wiki3-ai-site

./: .gitmodules  Dockerfile  jupyter-lite.json  jupyter_lite_config.json  pyproject.toml
.devcontainer/dev/: devcontainer.json
.devcontainer/jupyterlab/: devcontainer.json
.devcontainer/jupyterlite/: devcontainer.json
docs/: jupyter-lite.json
docs/api/contents/: all.json
docs/api/contents/notebooks/: all.json
docs/api/contents/utils/: all.json
docs/api/contents/wiki/: all.json
docs/extensions/@wiki3-ai/built-in-chat/: index.js  package.json
docs/extensions/@wiki3-ai/webllm-chat-kernel/: package.json
docs/files/: ai-sdk-kernel.ipynb  built-in-chat.ipynb  webllm-kernel.ipynb
docs/wiki/: ai-sdk-kernel.html  built-in-chat.html  index.html  prompt_ai.html  webllm-kernel.html  webllm.html
files/: built-in-chat.ipynb  prompt_ai.ipynb
