[project]
name = "wiki3-ai-site"
version = "0.3.2"
description = "Wiki3.ai JupyterLite Site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "ipywidgets",
    "jupyterlite<0.7.0",
    "jupyterlite-core<0.7.0",
    "jupyterlite-pyodide-kernel<0.7.0",
    "jupyter-server",
    "matplotlib",
    "notebook<7.5.0",
    "numpy",
    "pandas",
    "panel",
    "tornado",
    "watchfiles",
]

[project.optional-dependencies]
dev = [
    "pip",
    "jupyterlab>=4.4.0,<5",
]

kernels = [
    "ai-sdk-chat-kernel @ file:./ai-sdk-chat-kernel",
    "built-in-chat @ file:./built-in-ai-chat-kernel",
    "webllm-chat-kernel @ file:./webllm-chat-kernel",
]

[project.entry-points."jupyterlite.addon.v0"]
wiki = "jupyterlite_wiki_addon.addon:WikiPageAddon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jupyterlite_wiki_addon"]
